Create tests for linked list data structure

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -7,9 +7,9 @@ all: DataStructures TestsSub
 	@echo "Linking and compiling everything"
 	$(CC) $(wildcard $(OBJPATH)/*.o) -o $(OUTPATH)/tests $(CFLAGS)
 
-DataStructures: Node
+DataStructures: Node LinkedList
 
-TestsSub: UnitTests TestNode DataStructuresTests Tests
+TestsSub: UnitTests TestNode TestLinkedList DataStructuresTests Tests
 
 Tests:
 	@echo "Compiling the Tests.c file"
@@ -23,6 +23,10 @@ TestNode:
 	@echo "Compiling the TestNode.c file"
 	$(CC) -c ../Tests/DataStructures/$@/$@.c -o $(OBJPATH)/$@.o $(CFLAGS)
 
+TestLinkedList:
+	@echo "Compiling the TestLinkedList.c file"
+	$(CC) -c ../Tests/DataStructures/$@/$@.c -o $(OBJPATH)/$@.o $(CFLAGS)
+
 DataStructuresTests:
 	@echo "Compiling the DataStructuresTests.c file"
 	$(CC) -c ../Tests/DataStructures/$@.c -o $(OBJPATH)/$@.o $(CFLAGS)
@@ -30,6 +34,11 @@ DataStructuresTests:
 Node:
 	@echo "Compiling the Node.c file"
 	$(CC) -c ../HTTPServer/src/DataStructures/Common/$@.c -o $(OBJPATH)/$@.o $(CFLAGS)
+
+LinkedList:
+	@echo "Compiling the LinkedList.c file"
+	$(CC) -c ../HTTPServer/src/DataStructures/Linear/$@/$@.c -o $(OBJPATH)/$@.o $(CFLAGS)
+
 
 clean:
 	@echo "Cleaning object files"
